<resources>
    <string name="app_name">TaskAndBackstack</string>
    <string name="before">Before</string>
    <string name="next">Next</string>
    <string name="stack">Stack:</string>
    <string name="activity_a">I am activity A</string>
    <string name="activity_b">I am activity B</string>
    <string name="activity_c">I am activity C</string>
    <string name="activity_d">I am activity D</string>
    <string name="choose_script">Please, choose a script</string>
    <string name="first_script">First script</string>
    <string name="second_script">Second script</string>
    <string name="root_activity">It is root Activity</string>
</resources>
