<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        style="@style/CustomText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_script" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bFirst"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_script" />

        <Button
            android:id="@+id/bSecond"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/second_script" />
    </LinearLayout>

</LinearLayout>